fixed PlayerRepository injection to team service classes, moved AppConfig to config package,