@@ -1,7 +1,7 @@
 package artur.com.service;
 
 import artur.com.models.Player;
-import artur.com.repository.PlayerRepositoryImpl;
+import artur.com.repository.PlayerRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
@@ -10,11 +10,11 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
-@Qualifier("contractBased")
 public class ContractBasedTeamService implements TeamService {
 
     @Autowired
-    private PlayerRepositoryImpl playerRepository;
+    @Qualifier("hashMapPlayerRepository")
+    private PlayerRepository playerRepository;
 
     @Autowired
     private int maxPlayersInTeam;
@@ -24,7 +24,7 @@ public class ContractBasedTeamService implements TeamService {
         List<Player> contractPlayers = playerRepository.getAllPlayers().values().stream()
                 .filter(Player::isHasContract)
                 .limit(maxPlayersInTeam)
-                .collect(Collectors.toList());
+                .toList();
 
         System.out.println("Team selected based on contract: ");
         contractPlayers.forEach(player -> System.out.println(player.getName()));
